MH-1828: implemented FIXMEs in AdminRestService
git-svn-id: https://opencast.jira.com/svn/MH/trunk@4426 e6edf6fb-f266-4316-afb4-e53d95876a76